Bug 1446343 part 1 - Expose GetOuterToInner{Width,Height}DifferenceInCSSPixels to script. r=bz

MozReview-Commit-ID: 8mjIxRATTPD